Using bootstrap theme - base for documentation

--- a/docs.html
+++ b/docs.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="NodeJS framework to create the REST API">
     <meta name="author" content="Prathamesh Satpute">
-    <title>Coral</title>
+    <title>Coral - Documentation</title>
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
